<resources>
    <string name="app_name">Friendly Chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_view_user">ViewUserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="show_user_info">Show User</string>

    <string name="update_user_info">Update Info</string>
    <string name="user_avatar">Your Avatar</string>
    <string name="update_user_avatar">Change Avatar</string>

    <string name="room_status_switch">Private</string>
    <string name="room_name">Room Name</string>
    <string name="view_chat">View chat</string>

    <string name="create_room">Create Chat Room</string>
    <string name="edit_room_button">Edit</string>
    <string name="room_type_public">Public</string>
    <string name="room_type_private">Private</string>

    <string name="menu_message_edit">Edit</string>
    <string name="menu_message_pin">Pin</string>
    <string name="menu_message_delete">Delete</string>

    <string name="view_pinned_messages">View Pinned Messages</string>
    <string name="search_chat">Search Chat</string>
    <string name="change_theme">Change Theme</string>

    <string name="theme_default">Default</string>
    <string name="theme_lime">Lime</string>
    <string name="theme_red">Red</string>
    <string name="theme_green">Green</string>
    <string name="theme_blue">Blue</string>

</resources>
