<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewUserActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/user_avatar" />

        <ImageView
            android:id="@+id/activity_view_user_imageViewUserPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/activity_view_user_buttonUpdateUserAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_user_avatar" />

        <Button
            android:id="@+id/buttonUploadPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="upload photo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/fui_name_hint" />

        <EditText
            android:id="@+id/activity_view_user_editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fui_email_hint" />

        <EditText
            android:id="@+id/activity_view_user_editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/activity_view_user_buttonUpdateInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_user_info" />

        <Button
            android:id="@+id/activity_view_user_buttonSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>