<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoomActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.17000002">

        <EditText
            android:id="@+id/activity_create_room_editTextRoomName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/room_name"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/activity_create_room_switchIsPrivate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/room_status_switch" />

        <Button
            android:id="@+id/activity_create_room_buttonCreateRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_room" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/create_room"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>