<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ViewRoomActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_view_room_listViewMessages"
        android:layout_width="match_parent"
        android:layout_height="605dp"
        android:background="@color/fui_transparent"
        android:paddingHorizontal="16dp"
        ads:layout_constraintBottom_toTopOf="@+id/activity_view_room_linearLayout"
        ads:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/activity_view_room_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/activity_view_room_imageViewShareLocation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            ads:srcCompat="@android:drawable/ic_menu_mylocation" />

        <ImageView
            android:id="@+id/activity_view_room_imageViewSharePhoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            ads:srcCompat="@android:drawable/ic_menu_gallery" />

        <!--    <EditText-->
        <!--        android:id="@+id/activity_view_room_editTextMessage"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_weight="1"-->
        <!--        android:layout_margin="10dp"-->
        <!--        android:layout_gravity="center"-->
        <!--        android:padding="10dp"-->
        <!--        android:background="@drawable/edit_text_shadow"-->
        <!--        android:hint="Say something..."-->
        <!--        android:inputType="text" />-->

        <ImageView
            android:id="@+id/activity_view_room_buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:enabled="false"
            ads:srcCompat="@drawable/outline_send_gray_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:orientation="horizontal"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/activity_view_room_buttonEditRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_theme" />

        <Button
            android:id="@+id/activity_view_room_buttonViewPinnedMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_pinned_messages" />

        <Button
            android:id="@+id/activity_view_room_buttonSearchChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_chat" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

